# litestar-basic-auth

./: README.md  pyproject.toml
litestar_basic_auth/: __init__.py  app.py  app_with_plugin.py  basic_auth.py  plugin.py
tests/: test_basic_auth.py
