[tool.poetry]
name = "litestar-basic-auth"
version = "0.1.0"
description = ""
authors = ["Alc-Alc <alc@localhost>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["standard"], version = "^2.3.2"}
pydantic = {extras = ["email"], version = "^2.5.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
